--- a/html_css course/demo.css
+++ b/html_css course/demo.css
@@ -5,6 +5,23 @@
         height: 35px;
         width: 110px;
         border: none;
+        transition: opacity 0.15s;
+        cursor: pointer;
+
+    }
+    .uber:hover{
+        opacity: 0.7;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    .signs{
+        transition: box-shadow 0.15s;
+    }
+    .signs:hover{
+        box-shadow:1px 1px 5px black;
+    }
+    .am:hover{
+        background-color:rgb(226, 203, 84);
+
     }
     .signs{
         height: 30px;
