--- a/youtube/youtube.css
+++ b/youtube/youtube.css
@@ -5,7 +5,7 @@
 }
 .video{
  display: inline-block;
- margin: 20px;
+ 
 
 }
 .thum
@@ -14,19 +14,26 @@
 }
 .pro{
     display:inline-block;
+    
    
+}
+.profile{
+    height: 45px;
+    width: 45px;
+    margin-top: 10px;
+    border-radius: 22px;
+
 }
 .con{
    display: grid;
-   grid-template-columns: 50px 300px;
-
+   grid-template-columns: 50px 320px;
 }
 .thumbnails{
-    width: 375px;
-    height: 273px; 
+    width: 400px;
+    height: 220px; 
     border-radius: 10px;
     cursor: pointer;
 }
 .info{
-    width: 330px;
+    width: 350px;
 }
