--- a/youtube/header.css
+++ b/youtube/header.css
@@ -7,34 +7,89 @@
     margin-bottom: 25px;
     
 }
-.textbox{
-    width: 350px;
-    height: 30px;
-    border-radius: 20px;
-    border-style: solid;
-    border-color: black;
-  margin-left: 130px;
-  margin-top: 10px;
-    padding-left: 40px;
-}
-.leftsection{
-    display: inline-block;
-    width: 150px;
-    background-color: skyblue;
-    margin-right: 90px;
 
+.leftsection{
+    /* display: inline-block; */
+    width: 220px;
+   
+    margin-left: 1px;
+    margin-right: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bar{
+    height: 30px;
+}
+.logo{
+    margin-left: 30px;
+    height: 35px;
+}
+.logotext{
+    height:34px; 
+    font-weight: bold;
+    font-size: 25px;
+    margin-left: 10px;
+    margin-top: 35px;
+}
+.pow{
+  font-size: 13px;
+    color: grey;
 }
 .centersection{
     display: inline-block;
-    flex: 1;
-    
-    background-color: pink;
-    margin: 0px;
+    flex: 1fr;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: skyblue;
 
+}
+
+.textbox{
+    width: 470px;
+    height: 40px;
+   border-start-start-radius: 20px;
+   border-bottom-left-radius: 20px;
+    border-style: solid;
+    border-color: black;
+    padding-left: 40px;
+    font-size: 20px;
+}
+.search{
+    height: 20px;
+    color: white;
+   
+}
+.search1{
+    background-color: rgb(235, 234, 234) ;
+    height: 42px;
+    width: 70px;
+    border-style: solid;
+    border-left: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius:21px;
+    border-end-end-radius: 21px;
+}
+.mic{
+    margin-left: 10px;
+    height: 35px;
+    background-color: rgb(235, 234, 234) ;
+    border-radius: 20px;
 }
 .rightsection{
     display: inline-block;
-    width: 200px;
-    background-color: skyblue;
+    width: 200px;  
     margin-left: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.creator{
+    height: 30px;  
+}
+.notification{
+    height: 30px;   
 }
