--- a/youtube/header.css
+++ b/youtube/header.css
@@ -2,10 +2,14 @@
     height: 55px;
     display: flex;
     flex-direction: row;
-    margin: 0px;
     justify-content: space-around;
     margin-bottom: 25px;
-    
+    position: fixed;
+    background-color: white;
+    right: 0px
+    left 0px;
+   
+
 }
 
 .leftsection{
@@ -16,7 +20,9 @@
     margin-right: 90px;
     display: flex;
     align-items: center;
+    flex: 1;
     justify-content: center;
+    cursor: pointer;
 }
 .bar{
     height: 30px;
@@ -38,11 +44,12 @@
 }
 .centersection{
     display: inline-block;
-    flex: 1fr;
+    flex: 2;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    background-color: skyblue;
+    cursor: pointer;
+    
 
 }
 
@@ -55,6 +62,10 @@
     border-color: black;
     padding-left: 40px;
     font-size: 20px;
+    flex :3;
+}
+.text::placeholder{
+    font-size: 10px;
 }
 .search{
     height: 20px;
